web/style.css
/* Basic styling.*/
/* Fix the default font, etc.*/

@import url(http://fonts.googleapis.com/css?family=Ubuntu);
@import url(http://fonts.googleapis.com/css?family=Droid+Sans+Mono);

body    {max-width: 900px; margin-left: auto; margin-right: auto; font-family: 'Ubuntu', sans-serif; font-size: 9pt}
a       {color: #35a; text-decoration: none}
a:hover {color: #126; text-decoration: underline}

h1, h2, h3, h4, h5, h6 {font-family: 'Ubuntu', sans-serif; font-weight: normal}

/* Individual attribute display.*/
/* This mostly has to do with the way monospaced data gets shown.*/

.attributes h1       {font-weight: normal}
.attributes h1:after {content: '::'; color: #444; font-family: 'Droid Sans Mono', monospace; letter-spacing: -0.2em}

.attributes pre {font-family: 'Droid Sans Mono', monospace; padding: 10px; background: #222; color: #eee}

/* Metadata section.*/
/* Formatting for the author, description, and license.*/

.metadata * {font-weight: normal}
.metadata .identity:after {content: 'identity'; color: #444; font-size: 50%; text-transform: uppercase; padding-left: 15px}
.metadata .author:after   {content: 'author';   color: #444; font-size: 50%; text-transform: uppercase; padding-left: 15px}

.metadata .license {font-family: 'Droid Sans Mono', monospace; padding: 2px 10px; background: #eee; color: #444}
.metadata code {font-family: 'Droid Sans Mono', monospace; background: #eee; color: #444; padding: 2px}

/* Generated by SDoc */

